# mcp-db-explorer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_db_explorer/: database.py  prompts.py  safety.py  server.py
tests/: test_database.py  test_safety.py  test_server.py
